# selfbot-discord-AI

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
config/: config.yaml  config.yaml.example
data/: owo_config.json  owo_stats.json
src/self_discord_bot/config/: exceptions.py  loader.py  manager.py  models.py
src/selfbot_discord/: __init__.py  runtime.py
src/selfbot_discord.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/selfbot_discord/ai/: gemini.py
src/selfbot_discord/commands/: __init__.py  base.py  registry.py
src/selfbot_discord/commands/cogs/: __init__.py  action.py  claimowo.py  general.py  user.py  utility.py  whitelist.py
src/selfbot_discord/config/: __init__.py  environment.py  exceptions.py  loader.py  manager.py  models.py
src/selfbot_discord/core/: bot.py  decider.py  handlers.py
src/selfbot_discord/services/: cleanup.py  config_watcher.py  context.py  diagnostics.py  status.py  utility.py  whitelist.py
src/selfbot_discord/services/owo/: __init__.py  cli.py  game_service.py  models.py  parser.py  presenter.py  settings.py  stats_tracker.py
src/selfbot_discord/ui/: __init__.py  console.py
src/selfbot_discord/utils/: formatting.py  logging.py
tests/: conftest.py  reproduce_regex.py  simulate_strategies.py  test_cli_regex.py  test_message_chunking.py  test_utility_service.py
tests/config/: test_loader.py  test_manager.py
