[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfbot_discord"
version = "0.1.0"
description = "Discord self-bot with Google Gemini AI integration."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "discord.py-self>=2.0.0",
  "google-generativeai>=0.3.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "aiohttp>=3.9.0",
  "pyyaml>=6.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.8.0",
  "ruff>=0.1.8",
  "types-redis>=4.6.0.20240106",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]

[tool.coverage.run]
branch = true
source = ["selfbot_discord"]
omit = ["tests/*"]

[tool.uv]
managed = true
